--- a/package.json
+++ b/package.json
@@ -19,13 +19,11 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16",
     "path": "^0.12.7",
     "swagger-autogen": "^2.21.1",
-    "swagger-ui-express": "^4.4.0",
-    "yamljs": "^0.3.0"
+    "swagger-ui-express": "^4.4.0"
   }
 }
